refactor : 쿠폰 이벤트 조회 시, JOIN FETCH문을 사용해 한 번에 조회 및 db 접근을 여러번 하지 않도록 리팩토링